@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2005/02/24 12:13:58 agc Exp $
-
-SHA1 (IO-Socket-INET6-2.56.tar.gz) = 90e0f7d481278cbe837e14bac89deddcb90b5bab
-RMD160 (IO-Socket-INET6-2.56.tar.gz) = 8f5c3e09597f003475f4bbfa709b3980057e5df8
-Size (IO-Socket-INET6-2.56.tar.gz) = 12282 bytes
